# ChangeLog for dev-java/antlr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/antlr/ChangeLog,v 1.102 2014/01/03 15:51:36 ulm Exp $

  03 Jan 2014; Ulrich Müller <ulm@gentoo.org> -antlr-2.7.7.ebuild,
  -antlr-2.7.7-r1.ebuild, antlr-2.7.7-r2.ebuild, -antlr-2.7.7-r3.ebuild,
  -antlr-2.7.7-r4.ebuild, antlr-2.7.7-r5.ebuild:
  Fix LICENSE, bug 496690. Clean up.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> antlr-2.7.7-r1.ebuild,
  antlr-2.7.7-r3.ebuild, antlr-2.7.7-r4.ebuild, antlr-2.7.7-r5.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*antlr-3.1.3-r3 (03 Sep 2013)

  03 Sep 2013; Tom Wijsman <TomWij@gentoo.org> +antlr-3.1.3-r3.ebuild,
  -antlr-3.1.3-r2.ebuild:
  SLOT stringtemplate dependency, in preparation for bug #417895.

  30 Jun 2013; Justin Lecher <jlec@gentoo.org> antlr-2.7.7-r1.ebuild,
  antlr-2.7.7-r3.ebuild, antlr-2.7.7-r4.ebuild, antlr-2.7.7-r5.ebuild,
  metadata.xml:
  Fix usage of python-r1.eclass

  09 May 2013; Tom Wijsman <TomWij@gentoo.org> antlr-2.7.7-r2.ebuild,
  antlr-2.7.7.ebuild:
  Revert stable ebuilds.

  09 May 2013; Tom Wijsman <TomWij@gentoo.org> antlr-2.7.7-r1.ebuild,
  antlr-2.7.7-r2.ebuild, antlr-2.7.7-r3.ebuild, antlr-2.7.7-r4.ebuild,
  antlr-2.7.7-r5.ebuild, antlr-2.7.7.ebuild:
  Do not use /usr/bin/tlib or /usr/bin/lib until bug #469150 is resolved,
  /usr/bin/ar is used instead. This is a temporary fix for bug #468540. Upgraded
  to EAPI 5, distutils-r1 and indirect python-single-r1.

  05 Feb 2013; Rick Farina <zerochaos@gentoo.org> antlr-3.1.3-r2.ebuild:
  adding ~arm

  05 Feb 2013; Rick Farina <zerochaos@gentoo.org> antlr-2.7.7-r1.ebuild,
  antlr-2.7.7-r2.ebuild, antlr-2.7.7-r3.ebuild, antlr-2.7.7-r4.ebuild,
  antlr-2.7.7-r5.ebuild, antlr-2.7.7.ebuild:
  adding ~arm

  11 May 2012; Alexis Ballier <aballier@gentoo.org> antlr-2.7.7-r5.ebuild:
  keyword ~amd64-fbsd

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org> antlr-2.7.7-r5.ebuild,